<resources>
    <string name="app_name">Creatures Of The Night</string>
    <color name="background_color">#FFFFFF</color>
    <color name="button_clor">#107896</color>
    <string name="button_width">200dp</string>
    <string name="Host_Game_Button_Text">Host Game</string>
    <string name="Join_Game_Button_Text">Join Game</string>
    <string name="Help_Button_Text">How to Play</string>
    <string name="Host_Game_Text">Host Game</string>
    <string name="Join_Game_Text">Join Game</string>
    <string name="How_To_Play">How to Play</string>
    <string name="Enter_Town_Text">Enter Town</string>
    <string name="Start_Game_Lobby_Text">Join Game</string>
    <string name="Start_Game_Text">Ready</string>
    <string name="Quit_Game_Text">Quit</string>
    <string name="Authenticate_Text">Exsisting User</string>
    <string name="Enter_Password_Text">Password</string>
    <string name="Enter_Email_Text">Email</string>
    <string name="auth_failed">login failed</string>
    <string name="Error_Msg">ERROR</string>
    <string name="Enter_New_Game_Name_Text" />
    <string name="Master_List_Name">Master List</string>
    <string name="Day_Count_Main_Text">Day</string>
    <string name="Day_Count_Second_Text">Day</string>
    <string name="Night_Count_Text">Night X</string>
    <string name="Day_Main_Info_Text">Click on who you think the werewolf is.</string>
    <string name="Day_Second_Info_Text">Click on who you think the wolf is. If they have the most votes they will die.</string>
    <string name="Night_Doc_Info_Text">Doc Instructions.</string>
    <string name="Night_Wolf_Info_text">Wolf Insctructions</string>
    <string name="Night_Vil_Info_Text">Are You A Villager?</string>
    <string name="Day_Main_Button">Accept</string>
    <string name="Day_Second_Button">Accept</string>
    <string name="Night_Wolf_Button">Let the hunt begin!</string>
    <string name="Night_Doc_Button">The Doctor is in!</string>
    <string name="Night_Vil_button">Yes, I am a Villager.</string>
    <string name="Download_Lobby">Find Room</string>
    <string name="Day_Second">Day Second</string>
    <string name="Day_Text">Day</string>
    <string name="Day_2_text">This is your last chance to choose correctly!</string>
    <string name="Day_m_text">Nominate who you think is the wolf. Choose carefully!</string>
    <string name="Night_Text">Night</string>
    <string name="Night_Doc_Text">Pick a lucky soul you will save tonight.</string>
    <string name="Night_Vill_Text">Sleep tight, and don\'t let the werewolves bite!</string>
    <string name="Night_Wolf_Text">Let the hunt begin! Who will be gone by morning?</string>
</resources>





